[package]
name = "refuel"
version = "0.1.1"
edition = "2021"
license = "MIT"
license_file = "LICENSE"
description = "A simple diesel postgres migrator that uses TOML files"
repository = "https://github.com/davidkurilla/refuel.git"
readme = "README.md"

[dependencies]
toml = "0.5"
clap = { version = "4.1.8", features = ["derive"] }
