[package]
name = "refuel"
version = "0.1.2"
edition = "2021"
license = "MIT"
license_file = "LICENSE"
description = "A simple diesel postgres migrator that uses TOML files"
repository = "https://github.com/davidkurilla/refuel.git"
readme = "docs/README.md"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres"] }
diesel_migrations = "2.1.0"
toml = "0.5"
clap = { version = "4.1.8", features = ["derive"] }
